# mlwg-store

./: .gitignore  README.md
Setup/: pixi_py312_pytorch_setup.txt
Tutorial_1/AE_Cluster/: AE_K_Means.py  Data.py  K_Means.py  data.h5
Tutorial_1/Neural_Operator/: FNO1D.py  Helmholtz.py  Testing.py  Train.py  data.h5
Tutorial_2/: .gitignore  README.md  competition.py  competition_solution.py  example1.py  example2.py  example3.py  example4.py  example5.py  example6.py  example7.py  example8.py  example9.py  practical_session.py  practical_session_solution.py  pyproject.toml
Tutorial_3/: gpytorch_curvefit.py  gpytorch_sampling.py  gpytorch_surfacefit.py  gpytorch_surrogate.py  mkgp_curvefit.py  mkgp_sampling.py  mkgp_surfacefit.py  sample_data_10d_surrogate.h5  sample_data_1d_curvefit.h5  sample_data_2d_surfacefit.h5  sample_data_9d_surrogate.h5  sample_test_10d_surrogate.h5
Tutorial_4/: ebm_tutorial.ipynb  ebm_tutorial_solutions.ipynb  readme.md
Tutorial_5/: README.md  intro_to_state_space_models.ipynb  learning_state_space_models.ipynb
